force-app/main/default/objects/SiteUserBlogSetting__c/SiteUserBlogSetting__c.object-meta.xml
<CustomObject>
    <label>SiteUserBlogSetting</label>
    <nameField>
        <displayFormat>S{0000000}</displayFormat>
        <label>SiteUserBlogSetting Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SiteUserBlogSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>