force-app/main/default/objects/SiteUserBlogSetting__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>SiteUserBlogSettings</relationshipLabel>
    <relationshipName>SiteUserBlogSettings</relationshipName>
    <type>Lookup</type>
</CustomField>