force-app/main/default/objects/SiteUserBlogSetting__c/fields/View_Notification__c.field-meta.xml
<CustomField>
    <fullName>View_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Notification</label>
    <type>Checkbox</type>
</CustomField>