force-app/main/default/objects/SiteUserBlogSetting__c/fields/View_Post__c.field-meta.xml
<CustomField>
    <fullName>View_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Post</label>
    <type>Checkbox</type>
</CustomField>